[package]
name = "module-currency-id"
authors = ["Curio Capital AG"]
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstringify.workspace = true
serde = { workspace = true, optional = true }
codec = { package = "parity-scale-codec", workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }

sp-std.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-runtime/std"
]
