[package]
name = "mock-support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support.workspace = true
frame-system.workspace = true

sp-std.workspace = true

collection-primitives.workspace = true

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "collection-primitives/std",
    "sp-std/std"
]