[package]
name = "primitives"
authors = ["Curio Capital AG"]
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal.workspace = true
bstringify = "0.1.2"
serde = { workspace = true, optional = true }
codec = { package = "parity-scale-codec", workspace = true, features = ["max-encoded-len"] }
num_enum = { version = "0.5.1", default-features = false }
scale-info = { workspace = true, features = ["derive"] }
enumflags2 = "0.7.5"
paste = "1.0"

frame-support.workspace = true
sp-consensus-aura.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-core.workspace = true

# Polkadot
polkadot-runtime-common.workspace = true

# Cumulus
cumulus-primitives-core.workspace = true

[features]
default = ["std"]
std = [
    "serde",
    "frame-support/std",
    "sp-consensus-aura/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "polkadot-runtime-common/std",
    "cumulus-primitives-core/std",
]