[package]
name = "pallet-bridge"
version = "1.0.0"
authors = ["Curio Capital AG"]
edition = "2021"
license = "GPL-3.0"

[dependencies]
serde = { workspace = true, optional = true }
codec = { package = "parity-scale-codec", workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

frame-support.workspace = true
frame-system.workspace = true
frame-benchmarking = { workspace = true, optional = true }

sp-core.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
sp-io.workspace = true

pallet-balances.workspace = true
orml-traits.workspace = true
orml-tokens.workspace = true

pallet-currencies.workspace = true
primitives.workspace = true
mock-support.workspace = true

module-currency-id.workspace = true
bstringify.workspace = true

[dev-dependencies]
once_cell.workspace = true

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",

    "frame-support/std",
    "frame-system/std",

    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",

    "pallet-balances/std",
    "orml-traits/std",
    "orml-tokens/std",

    "pallet-currencies/std",
    "primitives/std",
    "mock-support/std",
    "module-currency-id/std"
]

runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-currencies/runtime-benchmarks",
    "orml-tokens/runtime-benchmarks",
]

try-runtime = []
