[package]
name = "pallet-common"
version = "1.0.0"
authors = ["Curio Capital AG"]
edition = "2021"
license = "GPL-3.0"

[dependencies]
serde = { workspace = true, default-features = false }
scale-info = { workspace = true, features = ["derive"] }
codec = { package = "parity-scale-codec", workspace = true, features = ["derive"] }

frame-support.workspace = true
frame-system.workspace = true

pallet-balances.workspace = true

sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-core.workspace = true

pallet-whitelist.workspace = true

primitives.workspace = true
collection-primitives.workspace = true
mock-support.workspace = true

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "pallet-balances/std",
    "pallet-whitelist/std",
    "collection-primitives/std",
    "primitives/std",
    "mock-support/std"
]

try-runtime = []
