[package]
name = "pallet-currencies"
version = "1.0.0"
authors = ["Curio Capital AG"]
edition = "2021"
license = "GPL-3.0"

[dependencies]
serde = { workspace = true, optional = true }
codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-core.workspace = true
sp-runtime.workspace = true
sp-io.workspace = true
sp-std.workspace = true

frame-support.workspace = true
frame-system.workspace = true
frame-benchmarking = { workspace = true, optional = true }

orml-traits.workspace = true
orml-utilities.workspace = true
orml-tokens.workspace = true

module-support.workspace = true
primitives.workspace = true

[dev-dependencies]
serde_json = "1.0.68"
hex = "0.4"
hex-literal.workspace = true
sp-core = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
module-currency-id.workspace = true
num_enum.workspace = true
bstringify.workspace = true


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"orml-tokens/std",
	"orml-traits/std",
	"orml-utilities/std",
	"primitives/std",
	"module-support/std",
	"module-currency-id/std"
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks"
]