[package]
name = "pallet-dex"
version = "1.0.0"
authors = ["Curio Capital AG"]
edition = "2021"
license = "GPL-3.0"

[dependencies]
serde = { workspace = true, optional = true }
codec = { package = "parity-scale-codec", workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
sp-core.workspace = true
sp-runtime.workspace = true
frame-support.workspace = true
frame-system.workspace = true
frame-benchmarking.workspace = true
sp-std.workspace = true
orml-traits.workspace = true
module-support.workspace = true
primitives.workspace = true

[dev-dependencies]
orml-tokens.workspace = true
sp-core.workspace = true
sp-io.workspace = true
pallet-balances.workspace = true

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-std/std",
	"orml-tokens/std",
	"orml-traits/std",
	"module-support/std",
	"primitives/std"
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks"
]
