[package]
name = "pallet-whitelist"
authors = ["Curio Capital AG"]
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, optional = true }
codec = { package = "parity-scale-codec", workspace = true, features = ["derive"], default-features = false }
scale-info = { workspace = true, features = ["derive"] }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-std.workspace = true
sp-core.workspace = true

# Curio
primitives.workspace = true
module-support.workspace = true

[dev-dependencies]
serde.workspace = true

# Substrate
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
	"module-support/std",
	"sp-io/std",
	"sp-std/std",
	"sp-core/std",
]
try-runtime = [ "frame-support/try-runtime" ]
